// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inspect inspectObjectCore Basic types 1`] = `
Object {
  "anys": "any[]",
  "fn": "(x: boolean) => number",
  "id": "<T>(x: T) => T",
  "record": "{ [x: number]: string; }",
  "str": "string",
}
`;

exports[`inspect inspectObjectCore Import 1`] = `
Object {
  "res": "<T extends string | Record<string, string>>(input: T) => T",
}
`;

exports[`inspect inspectObjectCore Preamble 1`] = `
Object {
  "res": "string | number",
}
`;

exports[`inspect inspectObjectCore Self-reference 1`] = `
Object {
  "a": "string",
  "b": "string | Promise<string>",
}
`;
